[dong][fix][uncontact]